--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -16,21 +16,21 @@ plugins:
     - assets:
       - CHANGELOG.md
       - package.json
-  - - "semantic-release-pnpm"
+  - - "@semantic-release/npm"
     - npmPublish: true
   - "@semantic-release/github"
 verifyConditions:
   - "@semantic-release/changelog"
   - "@semantic-release/github"
-  - "semantic-release-pnpm"
+  - "@semantic-release/npm"
 prepare:
   - "@semantic-release/changelog"
-  - "semantic-release-pnpm"
+  - "@semantic-release/npm"
   - - "@semantic-release/git"
     - message: "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
 publish:
   - "@semantic-release/github"
-  - "semantic-release-pnpm"
+  - "@semantic-release/npm"
 success: false
 fail: false
 tagFormat: "${version}"
