--- a/src/gcp/pci-dss-3.2.1/package.json
+++ b/src/gcp/pci-dss-3.2.1/package.json
@@ -8,7 +8,7 @@
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cloudgraphdev/cloudgraph-policy-packs.git",
+    "url": "git+git@github.com:cloudgraphdev/cloudgraph-policy-packs.git",
     "directory": "src/gcp/pci-dss-3.2.1"
   },
   "bugs": {
