--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "CloudGraph CSPM policy packs monorepo",
   "private": true,
   "repository": {
-    "type": "git",
-    "url": "git@github.com:cloudgraphdev/cloudgraph-policy-packs.git"
+    "url": "github.com:cloudgraphdev/cloudgraph-policy-packs"
   },
   "workspaces": [
     "src/**/*"
