--- a/src/aws/pci-dss-3.2.1/package.json
+++ b/src/aws/pci-dss-3.2.1/package.json
@@ -7,8 +7,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
-    "type": "git",
-    "url": "git+git@github.com:cloudgraphdev/cloudgraph-policy-packs.git",
+    "url": "github:cloudgraphdev/cloudgraph-policy-packs",
     "directory": "src/aws/pci-dss-3.2.1"
   },
   "bugs": {
