chore: add NPM workspace commands to package.json

--- a/src/aws/cis-1.2.0/package.json
+++ b/src/aws/cis-1.2.0/package.json
@@ -59,6 +59,6 @@
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
     "test": "jest",
-    "release": "npx semantic-release --no-ci -e semantic-release-monorepo"
+    "release": "npx semantic-release -e semantic-release-monorepo"
   }
 }
