--- a/src/gcp/cis-1.3.0/package.json
+++ b/src/gcp/cis-1.3.0/package.json
@@ -54,10 +54,11 @@
     "arrowParens": "avoid"
   },
   "scripts": {
-    "build": "pnpm prepack",
+    "build": "npm run prepack",
     "clean": "rm -rf dist",
     "lint": "eslint",
     "prepack": "pnpm clean && tsc -b",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest",
+    "release": "npx semantic-release -e semantic-release-monorepo"
   }
 }
