--- a/src/aws/nist-800-53-rev4/package.json
+++ b/src/aws/nist-800-53-rev4/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cloudgraph/policy-pack-aws-nist-800-53-rev4",
   "description": "Policy pack implementing The National Institute of Standards and Technology 800-53 Rev. 4 Benchmark for Amazon Web Services",
-  "version": "1.8.0",
+  "version": "1.8.1-alpha.1",
   "author": "AutoCloud",
   "license": "MPL-2.0",
   "main": "dist/index.js",
@@ -58,6 +58,6 @@
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
     "test": "NODE_ENV=test jest",
-    "release": "npx semantic-release -e semantic-release-monorepo"
+    "release": "npx semantic-release --no-ci -e semantic-release-monorepo"
   }
 }
