--- a/src/gcp/pci-dss-3.2.1/package.json
+++ b/src/gcp/pci-dss-3.2.1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cloudgraph/policy-pack-gcp-pci-dss-3.2.1",
   "description": "Policy pack implementing Payment Card Industry Data Security Standard version 3.2.1 Benchmark for Google Cloud Services",
-  "version": "1.4.0",
+  "version": "1.4.1-alpha.1",
   "author": "AutoCloud",
   "license": "MPL-2.0",
   "main": "dist/index.js",
@@ -58,6 +58,6 @@
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
     "test": "NODE_ENV=test jest",
-    "release": "npx semantic-release -e semantic-release-monorepo"
+    "release": "npx semantic-release --no-ci -e semantic-release-monorepo"
   }
 }
