--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "src/**/*"
   ],
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.2",
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.7",
-    "@semantic-release/npm": "^9.0.1",
-    "semantic-release": "^19.0.5",
-    "semantic-release-monorepo": "^7.0.5"
+    "@semantic-release/npm": "^10.0.2",
+    "semantic-release": "^21.0.0"
   },
   "resolutions": {
     "chalk": "^4.1.2"
