chore: update package scripts to use vanilla toolchain

--- a/src/aws/cis-1.2.0/package.json
+++ b/src/aws/cis-1.2.0/package.json
@@ -59,6 +59,6 @@
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
     "test": "jest",
-    "release": "npx semantic-release --no-ci"
+    "release": "npx semantic-release"
   }
 }
