--- a/src/aws/cis-1.3.0/package.json
+++ b/src/aws/cis-1.3.0/package.json
@@ -58,6 +58,6 @@
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
     "test": "NODE_ENV=test jest",
-    "release": "npx semantic-release --no-ci"
+    "release": "npx semantic-release"
   }
 }
