--- a/src/gcp/cis-1.3.0/package.json
+++ b/src/gcp/cis-1.3.0/package.json
@@ -57,8 +57,8 @@
     "build": "npm run prepack",
     "clean": "rm -rf dist",
     "lint": "eslint",
-    "prepack": "pnpm clean && tsc -b",
+    "prepack": "rm -rf dist && tsc -b",
     "test": "NODE_ENV=test jest",
-    "release": "npx semantic-release --no-ci"
+    "release": "npx semantic-release"
   }
 }
