--- a/src/gcp/nist-800-53-rev4/package.json
+++ b/src/gcp/nist-800-53-rev4/package.json
@@ -58,6 +58,6 @@
     "lint": "eslint",
     "prepack": "rm -rf dist && tsc -b",
     "test": "NODE_ENV=test jest",
-    "release": "npx semantic-release --no-ci"
+    "release": "npx semantic-release"
   }
 }
