chore: update .npmrc to auth to both NPM domains

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,8 @@
-registry=https://registry.npmjs.org/
-@cloudgraph:registry=https://registry.npmjs.org/
+registry=https://registry.npmjs.com/
+@cloudgraph:registry=https://registry.npmjs.com/
+
+//registry.npmjs.com/:_authToken=${NPM_TOKEN}
+//registry.npmjs.com/:always-auth=false
 
 //registry.npmjs.org/:_authToken=${NPM_TOKEN}
 //registry.npmjs.org/:always-auth=false
