--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,48 +17,30 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
           token: ${{secrets.gh_token}}
+
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: lts/Hydrogen
+          cache: 'npm'
           registry-url: "https://registry.npmjs.org"
 
-      - uses: pnpm/action-setup@v2.0.1
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: false
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        run: |
-          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
           GITHUB_TOKEN: ${{secrets.gh_token}}
 
       - name: Lint
-        run: pnpm lint
+        run: npm run lint
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
           GITHUB_TOKEN: ${{secrets.gh_token}}
 
       - name: Test
-        run: pnpm test
+        run: npm run test
 
       - name: Publish
-        run: pnpm release
+        run: npm run release
         env:
           NODE_ENV: "cicd"
           NPM_TOKEN: ${{secrets.npm_token}}
